--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "i18nexus pull && next dev",
+    "build": "i18nexus pull && next build",
+    "start": "i18nexus pull && next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "i18next": "^23.15.1",
+    "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.439.0",
-    "next": "14.2.6",
+    "next": "^14.2.14",
+    "next-i18n-router": "^5.5.1",
+    "next-i18next": "^15.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^15.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
+    "i18nexus-cli": "^3.5.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
