--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.2"
+    "react-i18next": "^15.0.2",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
