--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@types/react-dnd": "^2.0.36",
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.9",
+    "firebase": "^11.4.0",
     "i18next": "^23.15.1",
     "i18next-resources-to-backend": "^1.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.439.0",
     "next": "^14.2.14",
     "next-i18n-router": "^5.5.1",
     "next-i18next": "^15.3.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
     "react-slider": "^2.0.6"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
